cka/networks/ingress-resource-dif-domain.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-wear-watch
spec:
  rules:
  - host: wear.my-online-store.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: wear-service
            port:
              number: 80
  - host: watch.my-online-store.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wear-service
            port:
              number: 80
